--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run start\"",
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
